croatia-components-main@ce2ceb27993/central-logging/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch-passthrough
spec:
  host: elasticsearch-logging.apps.dev-nonpci-shared.npnbank.local
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: None 
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFAzCCAuugAwIBAgIQJQvAgGggdZ1IUYPJ8VxWIDANBgkqhkiG9w0BAQsFADAU
[...]
      p6PsQ6BStv1bd85H0tbqdR+xM/oP4Td1n0KWGA8JFCPVXKEG+r3v
      -----END CERTIFICATE-----
  to:
    kind: Service
    name: elasticsearch
    weight: 100
